# ttybible

./: .gitignore  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: 2-bug-report.yml  3-feature-request.yml  4-docs-issue.yml
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs
